hphp/hack/test/typecheck/is_expression/this2.php.exp
File "this2.php", line 4, characters 13-16:
Cannot use "this" outside of a class (Naming[2045])
File "this2.php", line 4, characters 13-16:
The "is" operator cannot be used with an untyped value (Typing[4195])
