hphp/hack/test/typecheck/is_expression/this2.php
<?hh // strict

function f(mixed $x): void {
  if ($x is this) {
    echo 'huh?';
  }
}
